# dataplane

./: .envrc  .gitignore  README.md  default.nix  justfile  shell.nix  testing.md
.cargo/: config.toml
.github/workflows/: bump.yml  dev.yml  dev.yml.old  version-bump.yml
cli/: Cargo.toml
dataplane/: Cargo.toml  build.rs
dataplane/src/drivers/: dpdk.rs
development/code/: running-tests.md
dpdk/: build.rs
dpdk-sys/: build.rs
dpdk-sysroot-helper/src/: lib.rs
dpdk/src/: lcore.rs
flow-filter/src/: lib.rs
hardware/src/os/: mod.rs
init/: Cargo.toml  build.rs
k8s-intf/: Cargo.toml  build.rs
k8s-intf/src/: lib.rs
mgmt/: Cargo.toml
mgmt/src/tests/: mgmt.rs
mgmt/tests/: reconcile.rs
nat/src/portfw/: flow_state.rs  mod.rs  nf.rs
nat/src/stateful/: mod.rs
net/src/buffer/: test_buffer.rs
net/src/flows/: flow_info.rs
nix/: platforms.nix  profiles.nix
nix/overlays/: dataplane-dev.nix  dataplane.nix  default.nix  frr.nix  llvm.nix
nix/pkgs/dpdk/: default.nix
nix/pkgs/dplane-plugin/: default.nix
nix/pkgs/dplane-rpc/: default.nix
nix/pkgs/frr/: clippy-helper.nix  default.nix
nix/pkgs/frr-agent/: default.nix
nix/pkgs/frr-config/: default.nix
nix/pkgs/frr-config/config/etc/: group  nsswitch.conf  passwd
nix/pkgs/frr-config/config/etc/frr/: daemons
nix/pkgs/frr-config/config/libexec/frr/: docker-start
nix/pkgs/frr/patches/: xrelifo.py.fix.patch  yang-hack.patch
npins/: sources.json
routing/: Cargo.toml
scripts/: gen-pins.sh  installl-real-nix.sh  rust.env  todo.sh  update-doc-headers.sh
scripts/doc/: custom-header.html
scripts/vlab/: Dockerfile  control.sh  run.sh
scripts/vlab/root/etc/zot/: cert.ini  config.json
sysfs/: Cargo.toml
validator/src/: main.rs
