[package]
name = "dataplane"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = ["dpdk"]
dpdk = ["dep:dpdk", "dep:dpdk-sysroot-helper"]

[dependencies]
afpacket = { workspace = true, features = ["async-tokio"] }
args = { workspace = true }
arrayvec = { workspace = true }
axum = { workspace = true, features = ["http1", "tokio"] }
axum-server = { workspace = true }
concurrency = { workspace = true }
config = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
dpdk = { workspace = true, optional = true }
dyn-iter = { workspace = true }
flow-entry = { workspace = true }
flow-filter = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
id = { workspace = true }
linkme = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
mgmt = { workspace = true }
mio = { workspace = true, features = ["os-ext", "net"] }
nat = { workspace = true }
net = { workspace = true, features = ["test_buffer"] }
nix = { workspace = true, features = ["socket", "hostname"] }
netdev = { workspace = true }
once_cell = { workspace = true }
ordermap = { workspace = true, features = ["std"] }
parking_lot = { workspace = true }
pipeline = { workspace = true }
pyroscope = { workspace = true }
routing = { workspace = true }
rtnetlink = { workspace = true, features = ["default", "tokio"] }
serde = { workspace = true, features = ["derive"] }
stats = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracectl = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = true }
vpcmap = { workspace = true }

[dev-dependencies]
# internal
net = { workspace = true, features = ["test_buffer"] }
routing = { workspace = true, features = ["testing"] }

# external
n-vm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
# internal
dpdk-sysroot-helper = { workspace = true, optional = true }

# external
