[package]
name = "dataplane-init"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = ["sysroot"]
sysroot = ["dep:dpdk-sysroot-helper"]

[dependencies]
# internal
hardware = { workspace = true, features = ["serde", "scan"] }
id = { workspace = true }
sysfs = { workspace = true }

# external
nix = { workspace = true, features = ["mount", "fs"] }
procfs = { workspace = true, features = [] }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true, features = [] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }

[dev-dependencies]
# internal

# external

[build-dependencies]
# internal
dpdk-sysroot-helper = { workspace = true, optional = true }

# external
