[package]
name = "dataplane-k8s-intf"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
bolero = ["dep:bolero", "dep:hardware", "dep:net", "dep:lpm", "net/test_buffer", "net/bolero", "hardware/bolero"]

[dependencies]
# internal
hardware = { workspace = true, optional = true, features = ["bolero"] }
lpm = { workspace = true, optional = true }
net = { workspace = true, optional = true, features = ["bolero"] }
tracectl = { workspace = true }
tracing = { workspace = true }

# external
bolero = { workspace = true, optional = true }
futures = { workspace = true }
kube = { workspace = true, features = ["client", "derive", "runtime", "rustls-tls"] }
kube-core = { workspace = true }
k8s-openapi = { workspace = true, features = ["latest", "schemars", "std"] }
linkme = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs"] }
schemars = { workspace = true, features = ["derive", "std"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
bolero = { workspace = true }
hardware = { workspace = true, features = ["bolero"] }
lpm = { workspace = true, features = [] }
net = { workspace = true, features = ["bolero", "test_buffer"] }

[build-dependencies]
dpdk-sysroot-helper = { workspace = true }
serde_json = { workspace = true }
