[package]
name = "dataplane-mgmt"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[[test]]
name = "reconcile"
path = "tests/reconcile.rs"
required-features = ["bolero"]

[features]
default = []
fake-pci-as-netdevsim = ["interface-manager/netdevsim", "net/netdevsim", "net/serde"]
bolero = ["dep:bolero", "interface-manager/bolero", "id/bolero", "net/bolero", "net/serde"]

[dependencies]
# internal
args = { workspace = true }
config = { workspace = true }
concurrency = { workspace = true }
flow-filter = { workspace = true }
id = { workspace = true }
interface-manager = { workspace = true }
k8s-intf = { workspace = true }
k8s-less = { workspace = true }
lpm = { workspace = true }
nat = { workspace = true }
net = { workspace = true }
rekon = { workspace = true }
routing = { workspace = true }
stats = { workspace = true }
tracectl = { workspace = true }
vpcmap = { workspace = true }

# external
bolero = { workspace = true, optional = true, default-features = false, features = ["alloc"] }
bytes = { workspace = true }
caps = { workspace = true, default-features = false, features = [] }
chrono = { workspace = true }
derive_builder = { workspace = true, default-features = false, features = ["default"] }
futures = { workspace = true, features = ["default"] }
linkme = { workspace = true }
multi_index_map = { workspace = true, features = ["serde"] }
netdev = { workspace = true }
rtnetlink = { workspace = true, features = ["default", "tokio"] }
serde = { workspace = true, features = ["rc", "derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing = { workspace = true, features = ["attributes"] }
tracing-test = { workspace = true }

[dev-dependencies]
# internal
fixin = { workspace = true }
id = { workspace = true, features = ["bolero"] }
interface-manager = { workspace = true, features = ["bolero"] }
lpm = { workspace = true, features = ["testing"] }
n-vm = { workspace = true }
net = { workspace = true, features = ["bolero"] }
pipeline = { workspace = true }
routing = { workspace = true, features = ["testing"] }
test-utils = { workspace = true }

# external
bolero = { workspace = true, default-features = false, features = ["alloc"] }
ipnet = { workspace = true }
pretty_assertions = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true }
