[package]
name = "dataplane-routing"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
testing = []

[dependencies]
# internal
args = { workspace = true }
cli = { workspace = true }
config = { workspace = true }
concurrency = { workspace = true }
dplane-rpc = { workspace = true }
left-right-tlcache = { workspace = true }
lpm = { workspace = true }
net = { workspace = true }
tracectl = { workspace = true }

# external
ahash = { workspace = true, features = ["no-rng"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["clock"] }
derive_builder = { workspace = true, features = ["default", "std"] }
futures-util = { workspace = true }
ipnet = { workspace = true }
left-right = { workspace = true }
linkme = { workspace = true }
mio = { workspace = true, features = ["os-ext", "net"] }
netgauze-bgp-pkt = { workspace = true }
netgauze-bmp-pkt = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "sync", "rt", "net", "macros"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }

# arp resolver
procfs = { workspace = true }
netdev = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, default-features = false }
concurrency = { workspace = true }
lpm = { workspace = true, features = ["testing"] }
net = { workspace = true, features = ["test_buffer"] }
rand = { workspace = true, default-features = false, features = ["thread_rng"] }
tokio = { workspace = true, features = ["full"] }
tracing-test = { workspace = true, features = [] }
