[package]
name = "dataplane-sysfs"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
# internal

# external
nix = { workspace = true, features = ["mount", "fs"] }
procfs = { workspace = true, features = [] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
# internal
n-vm = { workspace = true }

# external

[build-dependencies]
# internal

# external
